Fix TSlint : MKT

--- a/src/app/marketing/create-booking-marketing/create-booking-marketing.component.html
+++ b/src/app/marketing/create-booking-marketing/create-booking-marketing.component.html
@@ -60,7 +60,7 @@
               </div>
             </mat-radio-button>
           </mat-radio-group>
-          <mat-form-field *ngIf="fromGroup.get('cashRule').value !== '-1'">
+          <mat-form-field *ngIf="fromGroup.get('cashRule')?.value !== '-1'">
             <div fxLayout="row" style="margin: 8px;">
               <input type="number" [required]="fromGroup.get('cashRule').value !== '-1'" formControlName="cashRule"
                      matInput>
