fix source payment type , logic make fee advance on client, group

--- a/src/app/transactions/rollTerm-schedule-transaction/dialog/advance-fee-roll-term/advance-fee-roll-term.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/dialog/advance-fee-roll-term/advance-fee-roll-term.component.html
@@ -27,8 +27,8 @@
   <mat-form-field fxFlex="96%" *ngIf="form.contains('typeAdvanceCash')">
     <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelTypes' |translate}}</mat-label>
     <mat-select required formControlName="typeAdvanceCash">
-      <mat-option *ngFor="let type of typeAdvanceCashes" [value]="type.id">
-        {{ type.value }}
+      <mat-option *ngFor="let type of typeAdvanceCashes" [value]="type.paymentType">
+        {{ type.codeValue }}
       </mat-option>
     </mat-select>
   </mat-form-field>
