--- a/src/app/bills-manage/bills-manage.component.html
+++ b/src/app/bills-manage/bills-manage.component.html
@@ -100,7 +100,7 @@
     <tr mat-row *matRowDef="let file; columns: displayedColumns" class="select-row"></tr>
   </table>
   <mat-paginator
-    [length]="dataSource"
+    [length]="dataSource.data.length"
     [pageSize]="10"
     [pageSizeOptions]="[10, 25, 50, 100]"
     showFirstLastButtons
