--- a/src/app/products/saving-products/saving-products.component.html
+++ b/src/app/products/saving-products/saving-products.component.html
@@ -10,7 +10,7 @@
   <div fxLayout="row">
     <mat-form-field fxFlex>
       <mat-label>{{'Product_Component.savingProductComponent.filterLabel'| translate}}</mat-label>
-      <input matInput (keyup)="applyFilter($event.target.value)">
+      <input matInput (keyup)="applyFilter($event)">
     </mat-form-field>
   </div>
 
