--- a/src/app/shared/form-dialog/formfield/formfield.component.html
+++ b/src/app/shared/form-dialog/formfield/formfield.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="form" fxFlexFill>
 
-  <div *ngIf="formfield.controlType==='input' || formfield.controlType==='select'" fxFlexFill>
+  <div *ngIf="formfield?.controlType==='input' || formfield?.controlType==='select'" fxFlexFill>
 
     <mat-form-field fxFlexFill>
 
@@ -33,7 +33,7 @@
 
   </div>
 
-  <mat-form-field fxFlexFill *ngIf="formfield.controlType==='datepicker'">
+  <mat-form-field fxFlexFill *ngIf="formfield?.controlType==='datepicker'">
     <mat-label>{{ formfield.label }}</mat-label>
     <input matInput [matDatepicker]="datePicker" [min]="formfield.minDate" [max]="formfield.maxDate"
            [formControlName]="formfield.controlName" [required]="formfield.required">
@@ -44,7 +44,7 @@
     </mat-error>
   </mat-form-field>
 
-  <mat-checkbox *ngIf="formfield.controlType==='checkbox'" labelPosition="before" [checked]="formfield.value"
+  <mat-checkbox *ngIf="formfield?.controlType==='checkbox'" labelPosition="before" [checked]="formfield.value"
                 [formControlName]="formfield.controlName" [required]="formfield.required">
     {{ formfield.label }}
   </mat-checkbox>
