--- a/src/app/shared/keyboard-shortcuts-dialog/keyboard-shortcuts-dialog.component.html
+++ b/src/app/shared/keyboard-shortcuts-dialog/keyboard-shortcuts-dialog.component.html
@@ -2,7 +2,7 @@
 
 <div mat-dialog-content>
   <div fxLayout="column" fxLayoutGap="2%">
-    <ng-container *ngFor="let item of buttonConfig.buttonCombinations">
+    <ng-container *ngFor="let item of buttonConfig?.buttonCombinations">
       <div fxFlexFill fxFlex="50%">
         <span fxFlex="50%">
           <span *ngIf="item.ctrlKey"> <span class="modifierKey">Ctrl</span> + </span>
