tslint fixed: transaction

--- a/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.html
+++ b/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.html
@@ -41,7 +41,7 @@
   <h2>Tìm kiếm khách hàng khác đề tiếp tục giao dịch</h2>
   <midas-mainboard> </midas-mainboard>
 </div>
-<mat-dialog-actions align="center">
+<mat-dialog-actions fxFlexAlign="center">
   <p>
     <a mat-dialog-close mat-mini-fab href="#/">
       <!-- <button mat-raised-button  color="warn">Quay lại trang chủ</button> -->
