tslint Fixed: last package

--- a/src/app/clients/client-customer/client-customer.component.html
+++ b/src/app/clients/client-customer/client-customer.component.html
@@ -32,7 +32,7 @@
             <mat-form-field>
               <input matInput [placeholder]="'Client_Component.inputPlaceholderClosedCIF'| translate"
                      midasAfterValueChanged
-                     (delayedInput)="applyFilter($event)">
+                     (delayedInput)="applyFilterEvent($event)">
             </mat-form-field>
             <mat-checkbox #showClosedAccounts labelPosition="after">{{ 'Client_Component.checkBoxShowClosedAccount'| translate}}
             </mat-checkbox>
