--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -34,7 +34,7 @@
 
 
     <!-- Content -->
-    <midas-content class="contentCss" [isDesktop]="isHandset$"></midas-content>
+    <midas-content class="contentCss" [isDesktop]="_isHandset"></midas-content>
     <!-- Footer -->
     <midas-footer class="footerCss"></midas-footer>
 
