--- a/src/app/deposits/recurring-deposits/create-recurring-deposits-account/create-recurring-deposits-account.component.html
+++ b/src/app/deposits/recurring-deposits/create-recurring-deposits-account/create-recurring-deposits-account.component.html
@@ -84,7 +84,7 @@
         [recurringDepositsAccountTemplate]="recurringDepositsAccountTemplate"
         [recurringDepositsAccountProductTemplate]="recurringDepositsAccountProductTemplate"
         [recurringDepositAccountFormValid]="recurringDepositAccountFormValid"
-        [currencyCode]="recurringDepositAccountCurrencyForm.get('currencyCode')">
+        [currencyCode]="recurringDepositAccountCurrencyForm!.get('currencyCode')">
       </mifosx-recurring-deposits-account-charges-step>
 
     </mat-step>
