--- a/src/app/deposits/recurring-deposits/edit-recurring-deposit-account/edit-recurring-deposit-account.component.html
+++ b/src/app/deposits/recurring-deposits/edit-recurring-deposit-account/edit-recurring-deposit-account.component.html
@@ -84,7 +84,7 @@
         [recurringDepositsAccountTemplate]="recurringDepositsAccountAndTemplate"
         [recurringDepositsAccountProductTemplate]="recurringDepositsAccountProductTemplate"
         [recurringDepositAccountFormValid]="recurringDepositAccountFormValidAndNotPristine"
-        [currencyCode]="recurringDepositAccountCurrencyForm.get('currencyCode')">
+        [currencyCode]="recurringDepositAccountCurrencyForm!.get('currencyCode')">
       </mifosx-recurring-deposits-account-charges-step>
 
     </mat-step>
