--- a/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
+++ b/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
@@ -129,7 +129,7 @@
         <td mat-cell *matCellDef="let transaction">
           {{ transaction.paymentDetailId }}
           <br />
-          <labe style="color: red; font-weight: bold">{{ transaction.routingCode }}</labe>
+          <label style="color: red; font-weight: bold">{{ transaction.routingCode }}</label>
         </td>
       </ng-container>
 
