--- a/src/app/deposits/fixed-deposits/edit-fixed-deposit-account/edit-fixed-deposit-account.component.html
+++ b/src/app/deposits/fixed-deposits/edit-fixed-deposit-account/edit-fixed-deposit-account.component.html
@@ -33,7 +33,7 @@
 
     </mat-step>
 
-    <mat-step [stepControl]="fixedDepositAccountDetailsForm.get('productId')">
+    <mat-step [stepControl]="fixedDepositAccountDetailsForm?.get('productId')!">
 
       <ng-template matStepLabel>CURRENCY</ng-template>
 
