--- a/src/app/loans/loans-view/loan-account-actions/add-loan-charge/add-loan-charge.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/add-loan-charge/add-loan-charge.component.html
@@ -11,7 +11,7 @@
             <mat-label>Charge</mat-label>
             <mat-select required formControlName="chargeId">
               <mat-option *ngFor="let loanCharge of loanChargeOptions" [value]="loanCharge.id">
-                {{ loanCharge.name + ' (' + loanCharge?.currency.name + ')' }}
+                {{ loanCharge.name + ' (' + loanCharge.currency.name + ')' }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="loanChargeForm.controls.chargeId.hasError('required')">
