--- a/src/app/navigation/loan-account-table/loan-account-table.component.html
+++ b/src/app/navigation/loan-account-table/loan-account-table.component.html
@@ -31,7 +31,7 @@
     <th mat-header-cell *matHeaderCellDef> Status </th>
     <td mat-cell *matCellDef="let loanAccount">
       <span [className]="loanAccount.inArrears?'status-active-overdue' : (loanAccount.status.code | statusLookup)">
-        <fa-icon matTooltip="{{ loanAccount.status.value }}" matTooltipPosition="right" icon="circle" size="md"></fa-icon>
+        <fa-icon matTooltip="{{ loanAccount.status.value }}" matTooltipPosition="right" icon="circle" size="1x"></fa-icon>
       </span>
     </td>
   </ng-container>
