--- a/src/app/navigation/savings-account-table/savings-account-table.component.html
+++ b/src/app/navigation/savings-account-table/savings-account-table.component.html
@@ -29,7 +29,7 @@
     <th mat-header-cell *matHeaderCellDef> Status </th>
     <td mat-cell *matCellDef="let savingsAccount">
       <span [className]="savingsAccount.status.code | statusLookup">
-        <fa-icon matTooltip="{{ savingsAccount.status.value }}" matTooltipPosition="right" icon="circle" size="md"></fa-icon>
+        <fa-icon matTooltip="{{ savingsAccount.status.value }}" matTooltipPosition="right" icon="circle" size="1x"></fa-icon>
       </span>
     </td>
   </ng-container>
