--- a/src/app/savings/create-savings-account/create-savings-account.component.html
+++ b/src/app/savings/create-savings-account/create-savings-account.component.html
@@ -27,7 +27,7 @@
       <ng-template matStepLabel>DETAILS</ng-template>
 
       <mifosx-savings-account-details-step
-        [savingsAccountTemplate]="savingsAccountTemplate" 
+        [savingsAccountTemplate]="savingsAccountTemplate"
         (savingsAccountProductTemplate)="setTemplate($event)"
       >
       </mifosx-savings-account-details-step>
@@ -38,7 +38,7 @@
 
       <ng-template matStepLabel>TERMS</ng-template>
 
-      <mifosx-savings-account-terms-step 
+      <mifosx-savings-account-terms-step
         [savingsAccountProductTemplate]="savingsAccountProductTemplate"
       ></mifosx-savings-account-terms-step>
 
@@ -51,7 +51,7 @@
       <mifosx-savings-account-charges-step
         [savingsAccountProductTemplate]="savingsAccountProductTemplate"
         [savingsAccountTemplate]="savingsAccountTemplate"
-        [currencyCode]="savingsAccountTermsForm.get('currencyCode')"
+        [currencyCode]="savingsAccountTermsForm!.get('currencyCode')"
       >
       </mifosx-savings-account-charges-step>
 
