--- a/src/app/shared/mat-select-search/mat-select-search.component.html
+++ b/src/app/shared/mat-select-search/mat-select-search.component.html
@@ -1,26 +1,27 @@
+<input matInput class="mat-select-search-input mat-select-search-hidden" />
 
-<input matInput class="mat-select-search-input mat-select-search-hidden"/>
-
-<div class="mat-select-search-inner"
-     [ngClass]="{'mat-select-search-inner-multiple': matSelect.multiple}">
-  <input matInput
-         class="mat-select-search-input"
-         #searchSelectInput
-         (keydown)="_handleKeydown($event)"
-         (input)="onInputChange($event)"
-         (blur)="onBlur($event)"
-         [placeholder]="placeholderLabel"
+<div class="mat-select-search-inner" [className]="matSelect.multiple ? 'mat-select-search-inner-multiple' : ''">
+  <input
+    matInput
+    class="mat-select-search-input"
+    #searchSelectInput
+    (keydown)="_handleKeydown($event)"
+    (input)="onInputChange($event)"
+    (blur)="onBlur($event)"
+    [placeholder]="placeholderLabel"
   />
-  <button mat-button *ngIf="value"
-          mat-icon-button
-          aria-label="Clear"
-          (click)="_reset(true)"
-          class="mat-select-search-clear">
-    <mat-icon>close</mat-icon>
+  <button
+    mat-button
+    *ngIf="value"
+    mat-icon-button
+    aria-label="Clear"
+    (click)="_reset(true)"
+    class="mat-select-search-clear"
+  >
+    <mat-icon>home</mat-icon>
   </button>
 </div>
 
-<div *ngIf="noEntriesFoundLabel && value && _options?.length === 0"
-     class="mat-select-search-no-entries-found">
-  {{noEntriesFoundLabel}}
+<div *ngIf="noEntriesFoundLabel && value && _options?.length === 0" class="mat-select-search-no-entries-found">
+  {{ noEntriesFoundLabel }}
 </div>
