--- a/src/app/account-transfers/edit-standing-instructions/edit-standing-instructions.component.html
+++ b/src/app/account-transfers/edit-standing-instructions/edit-standing-instructions.component.html
@@ -9,81 +9,81 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Name</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.name" | translate }}</mat-label>
             <input matInput formControlName="name">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Applicant</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.applicant" | translate }}</mat-label>
             <input matInput formControlName="applicant">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Type</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.type" | translate }}</mat-label>
             <input matInput formControlName="type">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>From Account Type</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.fromAccountType" | translate }}</mat-label>
             <input matInput formControlName="fromAccountType">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Priority</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.priority" | translate }}</mat-label>
             <mat-select required formControlName="priority">
               <mat-option *ngFor="let priorityType of priorityTypeData" [value]="priorityType.id">
                 {{ priorityType.value }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="editStandingInstructionsForm.controls.priority.hasError('required')">
-              Priority is <strong>required</strong>
+              {{ "AccountTransfers.EditStandingInstructions.errpriority" | translate }}<strong>{{ "AccountTransfers.EditStandingInstructions.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Status</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.status" | translate }}</mat-label>
             <mat-select required formControlName="status">
               <mat-option *ngFor="let statusType of statusTypeData" [value]="statusType.id">
                 {{ statusType.value }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="editStandingInstructionsForm.controls.status.hasError('required')">
-              Status is <strong>required</strong>
+              {{ "AccountTransfers.EditStandingInstructions.errstatus" | translate }}<strong>{{ "AccountTransfers.EditStandingInstructions.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>From Account</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.fromAccount" | translate }}</mat-label>
             <input matInput formControlName="fromAccount">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Destination</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.destination" | translate }}</mat-label>
             <input matInput formControlName="destination">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>To Office</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.toOffice" | translate }}</mat-label>
             <input matInput formControlName="toOffice">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Beneficiary</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.toClientId" | translate }}</mat-label>
             <input matInput formControlName="toClientId">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>To Account Type</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.toAccountType" | translate }}</mat-label>
             <input matInput formControlName="toAccountType">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>To Account</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.toAccount" | translate }}</mat-label>
             <input matInput formControlName="toAccount">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Standing Instruction Type</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.instructionType" | translate }}</mat-label>
             <mat-select formControlName="instructionType">
               <mat-option *ngFor="let instructionsType of instructionTypeData"
                 [value]="instructionsType.id">
@@ -93,51 +93,51 @@
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Amount</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.amount" | translate }}</mat-label>
             <input currencyMask matInput formControlName="amount">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Validity From</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.validFrom" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="validFromDatePicker" required
               formControlName="validFrom">
             <mat-datepicker-toggle matSuffix [for]="validFromDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #validFromDatePicker></mat-datepicker>
             <mat-error *ngIf="editStandingInstructionsForm.controls.validFrom.hasError('required')">
-              Valid From Date is <strong>required</strong>
+              {{ "AccountTransfers.EditStandingInstructions.errvalidFrom" | translate }}<strong>{{ "AccountTransfers.EditStandingInstructions.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Validity To</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.validTill" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="validTillDatePicker" required
               formControlName="validTill">
             <mat-datepicker-toggle matSuffix [for]="validTillDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #validTillDatePicker></mat-datepicker>
             <mat-error *ngIf="editStandingInstructionsForm.controls.validTill.hasError('required')">
-              Valid Till Date is <strong>required</strong>
+              {{ "AccountTransfers.EditStandingInstructions.errvalidTill" | translate }}<strong>{{ "AccountTransfers.EditStandingInstructions.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Recurrence Type</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.recurrenceType" | translate }}</mat-label>
             <mat-select required formControlName="recurrenceType">
               <mat-option *ngFor="let recurrenceType of recurrenceTypeData" [value]="recurrenceType.id">
                 {{ recurrenceType.value }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="editStandingInstructionsForm.controls.recurrenceType.hasError('required')">
-              Recurrence Type is <strong>required</strong>
+              {{ "AccountTransfers.EditStandingInstructions.errrecurrenceType" | translate }}<strong>{{ "AccountTransfers.EditStandingInstructions.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Interval</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.recurrenceInterval" | translate }}</mat-label>
             <input matInput formControlName="recurrenceInterval">
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Recurrence Frequency</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.recurrenceFrequency" | translate }}</mat-label>
             <mat-select formControlName="recurrenceFrequency">
               <mat-option *ngFor="let recurrenceFrequencyType of recurrenceFrequencyTypeData"
                 [value]="recurrenceFrequencyType.id">
@@ -147,7 +147,7 @@
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>On Month Day</mat-label>
+            <mat-label>{{ "AccountTransfers.EditStandingInstructions.recurrenceOnMonthDay" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="recurrenceOnMonthDayDatePicker"
               formControlName="recurrenceOnMonthDay">
             <mat-datepicker-toggle matSuffix [for]="recurrenceOnMonthDayDatePicker"></mat-datepicker-toggle>
@@ -159,9 +159,9 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../view']">Cancel</button>
+        <button type="button" mat-raised-button [routerLink]="['../view']">{{ "ShareButton.CancelEng" | translate }}</button>
         <button mat-raised-button color="primary" [disabled]="!editStandingInstructionsForm.valid"
-        (click)="submit()" *midasHasPermission="'UPDATE_STANDINGINSTRUCTION'">Submit</button>
+        (click)="submit()" *midasHasPermission="'UPDATE_STANDINGINSTRUCTION'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
