--- a/src/app/account-transfers/list-standing-instructions/list-standing-instructions.component.html
+++ b/src/app/account-transfers/list-standing-instructions/list-standing-instructions.component.html
@@ -4,7 +4,7 @@
 
     <div fxFlexFill *ngIf="isFromClient">
       <span fxFlex="40%">
-        <h3 class="mat-h3">Client Name</h3>
+        <h3 class="mat-h3">{{ "AccountTransfers.ListStandingInstructions.h3" | translate }}</h3>
       </span>
       <span fxFlex="60%">
         <h3 class="mat-h3">{{ clientName }}</h3>
@@ -13,17 +13,17 @@
 
     <div fxFlexFill *ngIf="!isFromClient">
       <mat-form-field fxFlex="30%">
-        <input matInput placeholder="ClientName" [formControl]="clientNameControl">
+        <input matInput [placeholder]="'AccountTransfers.ListStandingInstructions.inputPlaceholderClientName'| translate" [formControl]="clientNameControl">
       </mat-form-field>
       <mat-form-field fxFlex="30%">
-        <input matInput placeholder="From Client Id" [formControl]="fromClientId">
+        <input matInput [placeholder]="'AccountTransfers.ListStandingInstructions.inputPlaceholderFromClientId'| translate" [formControl]="fromClientId">
       </mat-form-field>
     </div>
 
     <mat-divider [inset]="true"></mat-divider>
 
     <mat-form-field fxFlex="30%">
-      <mat-label>Type</mat-label>
+      <mat-label>{{ "AccountTransfers.ListStandingInstructions.transferType" | translate }}</mat-label>
       <mat-select [formControl]="transferType">
         <mat-option *ngFor="let transferTypeData of transferTypeDatas" [value]="transferTypeData.id">
           {{ transferTypeData.value }}
@@ -32,11 +32,11 @@
     </mat-form-field>
 
     <mat-form-field fxFlex="30%">
-      <input matInput placeholder="From Account Id" [formControl]="fromAccountId">
+      <input matInput [placeholder]="'AccountTransfers.ListStandingInstructions.inputPlaceholderFromAccountId'| translate" [formControl]="fromAccountId">
     </mat-form-field>
 
     <button mat-raised-button color="primary" *midasHasPermission="'READ_STANDINGINSTRUCTION'" (click)="filterStandingInstructions()" class="filter-button">
-      &nbsp;&nbsp;Filter
+      &nbsp;&nbsp;{{ "ShareButton.Filter" | translate }}
     </button>
   </div>
 
@@ -44,56 +44,56 @@
   <table mat-table #instructionsTable [dataSource]="dataSource">
 
     <ng-container matColumnDef="client">
-      <th mat-header-cell *matHeaderCellDef> Client </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "AccountTransfers.ListStandingInstructions.table.client" | translate }} </th>
       <td mat-cell *matCellDef="let instruction">{{instruction.fromClient.displayName}}-{{instruction.fromClient.id}}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="fromAccount">
-      <th mat-header-cell *matHeaderCellDef> From Account </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "AccountTransfers.ListStandingInstructions.table.fromAccount" | translate }} </th>
       <td mat-cell *matCellDef="let instruction">{{instruction.fromAccount.accountNo}}
         ({{instruction.fromAccountType.value}})</td>
     </ng-container>
 
     <ng-container matColumnDef="beneficiary">
-      <th mat-header-cell *matHeaderCellDef> Beneficiary </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "AccountTransfers.ListStandingInstructions.table.beneficiary" | translate }} </th>
       <td mat-cell *matCellDef="let instruction">{{instruction.toClient.displayName}}</td>
     </ng-container>
 
     <ng-container matColumnDef="toAccount">
-      <th mat-header-cell *matHeaderCellDef> To Account </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "AccountTransfers.ListStandingInstructions.table.toAccount" | translate }} </th>
       <td mat-cell *matCellDef="let instruction">{{instruction.toAccount.accountNo}}
         ({{instruction.toAccountType.value}})</td>
     </ng-container>
 
     <ng-container matColumnDef="amount">
-      <th mat-header-cell *matHeaderCellDef> Amount </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "AccountTransfers.ListStandingInstructions.table.amount" | translate }} </th>
       <td mat-cell *matCellDef="let instruction">{{instruction.instructionType.value}}/{{instruction.amount}}</td>
     </ng-container>
 
     <ng-container matColumnDef="validity">
-      <th mat-header-cell *matHeaderCellDef> Validity </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "AccountTransfers.ListStandingInstructions.table.validity" | translate }} </th>
       <td mat-cell *matCellDef="let instruction">{{instruction.validFrom | date}} to {{instruction.validTill | date}}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "AccountTransfers.ListStandingInstructions.table.actions" | translate }} </th>
       <td mat-cell *matCellDef="let instruction">
         <span *ngIf="instruction.status.value!=='Deleted'">
-          <button class="account-action-button" mat-raised-button color="primary" matTooltip="Edit Standing Instruction"
+          <button class="account-action-button" mat-raised-button color="primary" [matTooltip]="'AccountTransfers.ListStandingInstructions.table.ToolTipEdit'| translate"
             *midasHasPermission="'UPDATE_STANDINGINSTRUCTION'"
             [routerLink]="['../', instruction.id, 'edit']">
             <i class="fa fa-edit"></i>
           </button>
         </span>
         <span *ngIf="instruction.status.value!=='Deleted'">
-          <button class="account-action-button" mat-raised-button color="warn" matTooltip="Delete Standing Instruction"
+          <button class="account-action-button" mat-raised-button color="warn" [matTooltip]="'AccountTransfers.ListStandingInstructions.table.ToolTipDelete'| translate"
             *midasHasPermission="'DELETE_STANDINGINSTRUCTION'" (click)="deleteStandingInstruction(instruction.id)">
             <i class="fa fa-times"></i>
           </button>
         </span>
-        <button class="account-action-button" mat-raised-button color="primary" matTooltip="View Standing Instruction"
+        <button class="account-action-button" mat-raised-button color="primary" [matTooltip]="'AccountTransfers.ListStandingInstructions.table.ToolTipView'| translate"
           *midasHasPermission="'READ_STANDINGINSTRUCTION'"
           [routerLink]="['../', instruction.id, 'view']">
           <i class="fa fa-eye"></i>
