--- a/src/app/account-transfers/view-account-transfer/view-account-transfer.component.html
+++ b/src/app/account-transfers/view-account-transfer/view-account-transfer.component.html
@@ -6,70 +6,70 @@
 
       <div fxLayout="row wrap" fxLayout.lt-md="column">
 
-        <h3 class="mat-h3" fxFlexFill>Transaction Details</h3>
+        <h3 class="mat-h3" fxFlexFill>{{ "AccountTransfers.ViewAccountTransfer.h3" | translate }}</h3>
 
         <mat-divider [inset]="true"></mat-divider>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Transaction Amount:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewAccountTransfer.transferAmount" | translate }}</span>
           <span fxFlex="60%">{{ viewAccountTransferData.transferAmount | money}}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Transaction Date:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewAccountTransfer.transferDate" | translate }}</span>
           <span fxFlex="60%">{{ viewAccountTransferData.transferDate | date }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Description:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewAccountTransfer.transferDescription" | translate }}</span>
           <span fxFlex="60%">{{ viewAccountTransferData.transferDescription }}</span>
         </div>
 
-        <h3 class="mat-h3" fxFlexFill>Transferred From</h3>
+        <h3 class="mat-h3" fxFlexFill>{{ "AccountTransfers.ViewAccountTransfer.h3_2" | translate }}</h3>
 
         <mat-divider [inset]="true"></mat-divider>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Office:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewAccountTransfer.fromOfficeName" | translate }}</span>
           <span fxFlex="60%">{{ viewAccountTransferData.fromOffice.name }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Client:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewAccountTransfer.fromClientDisplayName" | translate }}</span>
           <span fxFlex="60%">{{ viewAccountTransferData.fromClient.displayName }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Account Type:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewAccountTransfer.fromAccountType" | translate }}</span>
           <span fxFlex="60%">{{ viewAccountTransferData.fromAccountType.value }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Account #:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewAccountTransfer.accountNo" | translate }}</span>
           <span fxFlex="60%">{{ viewAccountTransferData.fromAccount.accountNo }}</span>
         </div>
 
-        <h3 class="mat-h3" fxFlexFill>Transferred To</h3>
+        <h3 class="mat-h3" fxFlexFill>{{ "AccountTransfers.ViewAccountTransfer.h3_3" | translate }}</h3>
 
         <mat-divider [inset]="true"></mat-divider>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Office:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewAccountTransfer.toOfficeName" | translate }}</span>
           <span fxFlex="60%">{{ viewAccountTransferData.toOffice.name }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Client:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewAccountTransfer.toClientDisplayName" | translate }}</span>
           <span fxFlex="60%">{{ viewAccountTransferData.toClient.displayName }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Account Type:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewAccountTransfer.toAccountType" | translate }}</span>
           <span fxFlex="60%">{{ viewAccountTransferData.toAccountType.value }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Account #:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewAccountTransfer.toAccountNo" | translate }}</span>
           <span fxFlex="60%">{{ viewAccountTransferData.toAccount.accountNo }}</span>
         </div>
 
