--- a/src/app/account-transfers/view-standing-instructions/view-standing-instructions.component.html
+++ b/src/app/account-transfers/view-standing-instructions/view-standing-instructions.component.html
@@ -1,10 +1,10 @@
 <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="2%" fxLayout.lt-md="column" class="container m-b-20">
   <button mat-raised-button color="primary" [routerLink]="['../', 'edit']">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit
+    {{ "ShareButton.Edit" | translate }}
   </button>
   <button mat-raised-button color="primary" [routerLink]="['../', 'list-account-transactions']" *midasHasPermission="'READ_ACCOUNTTRANSFER'">
-    View Transactions History
+    {{ "AccountTransfers.ViewStandingInstructions.btnViewTransHis" | translate }}
   </button>
 </div>
 
@@ -21,37 +21,37 @@
         <mat-divider [inset]="true"></mat-divider>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Applicant:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.fromClientDisplayName" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.fromClient.displayName }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Type:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.transferType" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.transferType.value }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Priority:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.priority" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.priority.value }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Status:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.status" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.status.value }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">From Account Type:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.fromAccountType" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.fromAccountType.value }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">From Account:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.fromAccountNo" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.fromAccount.productName }} - {{ standingInstructionsData.fromAccount.accountNo }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Destination:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.Destination" | translate }}</span>
           <span fxFlex="60%">
             <span *ngIf="allowclientedit"> Within Bank </span>
             <span *ngIf="!allowclientedit"> Own Account </span>
@@ -59,57 +59,57 @@
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">To Office:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.toOfficeName" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.toOffice.name }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Beneficiary:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.toClientDisplayName" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.toClient.displayName }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">To Account Type:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.toAccountType" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.toAccountType.value }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">To Account:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.toAccountNo" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.toAccount.productName }} - {{standingInstructionsData.toAccount.accountNo}}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Standing Instruction Type:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.instructionType" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.instructionType.value }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Amount:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.amount" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.amount | money}}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Validity:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.Validity" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.validFrom | date }} - {{ standingInstructionsData.validTill | date }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Recurrence type:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.recurrenceType" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.recurrenceType.value }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Interval:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.recurrenceInterval" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.recurrenceInterval }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Recurrence Frequency:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.recurrenceFrequency" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.recurrenceFrequency.value }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">On Month Day:</span>
+          <span fxFlex="40%">{{ "AccountTransfers.ViewStandingInstructions.recurrenceOnMonthDay" | translate }}</span>
           <span fxFlex="60%">{{ standingInstructionsData.recurrenceOnMonthDay | date }}</span>
         </div>
 
